JavaArtifactInfo to Kt
Bug: n/a
Test: n/a
Change-Id: I97697cc51681e2ba59e5692b5ad1c979e24715d6

GitOrigin-RevId: 5c671d5cdb855b9cc8cac6eb6d8d9b0ef8501cfd
(cherry picked from commit 0b98686e2ce63c3cc0556fd279506ea8424fe8da)